# pokelakehouse

./: .gitignore  CLAUDE.md  POKELAKEHOUSE_SPEC.md  README.md  constants.py  databricks.yml  pyproject.toml
.github/workflows/: deploy.yml
configs/: pipeline_config.json
notebooks/1_bronze/: 01_ingest_pokeapi.py
notebooks/2_silver/: 02_transform_pokemon.py  03_transform_types_abilities.py
notebooks/3_quality/: 04_data_quality_checks.py  05_data_quality_checks.py
notebooks/4_gold/: 04_build_star_schema.py  05_build_star_schema.py
pipelines/: pokelakehouse_workflow.yml
tests/: test_transformations.py
